--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeffrey Loyal | Portfolio</title>
+    <title>Jeffrey Hoyle | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
-        <p>Your Name | Aspiring [Your Role] | University of Denver Graduate</p>
+        <p>Jeffrey Hoyle | Inside Sales Consultant for the San Jose Sharks | University of Denver Senior</p>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -23,10 +23,10 @@
     </header>
     <section>
         <h2>About Me</h2>
-        <p>Hello! I’m Jeffrey, a Business Marketing & Analytics graduate from the University of Denver. I have a passion for sports marketing, digital campaigns, and strategic branding. My experience spans across marketing strategy, sales, and data-driven business decisions.</p>
+        <p>Hi there! I’m Jeffrey, a Business Marketing & Analytics graduate from the University of Denver. I have a passion for sports marketing, digital campaigns, and strategic branding. My experience spans across marketing strategy, sales, and data-driven business decisions.</p>
     </section>
     <footer>
-        <p>&copy; 2025 Jeffrey Loyal. All Rights Reserved.</p>
+        <p>&copy; 2025 Jeffrey Hoyle. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
