--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeffrey Hoyle | Portfolio</title>
+    <title>Jeffrey Loyal | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <p>Hi there! I’m Jeffrey, a Business Marketing & Analytics graduate from the University of Denver. I have a passion for sports marketing, digital campaigns, and strategic branding. My experience spans across marketing strategy, sales, and data-driven business decisions.</p>
     </section>
     <footer>
-        <p>&copy; 2025 Jeffrey Hoyle. All Rights Reserved.</p>
+        <p>&copy; 2025 Jeffrey Loyal. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
