--- a/education.html
+++ b/education.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education | Jeffrey Loyal</title>
+    <title>Education | Jeffrey Hoyle</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Education</h1>
+        <h1>Jeffrey Hoyle</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -29,26 +29,6 @@
     </section>
 
     <section>
-        <h2>📜 Certifications</h2>
-        <ul>
-            <li>Career Essentials in Generative AI - LinkedIn</li>
-            <li>Digital Marketing Simternship - Stukent</li>
-            <li>HubSpot Email Marketing Certification - HubSpot</li>
-            <li>Meta Ads Manager - Meta</li>
-            <li>HubSpot Inbound Marketing Certification - HubSpot</li>
-            <li>Microsoft Certified Application Specialist: Word, Excel, PowerPoint - Microsoft</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>📢 Workshops</h2>
-        <ul>
-            <li>San Jose Sharks Inside Sales Workshop - November 2024</li>
-            <li>Ball Arena Sports Inside Sales Workshop - February 2025</li>
-        </ul>
-    </section>
-
-    <section>
         <h2>🏆 Extracurricular & Leadership</h2>
         <ul>
             <li>DU Athletics In-Game Marketing Volunteer</li>
@@ -61,8 +41,28 @@
         </ul>
     </section>
 
+    <section>
+        <h2>📢 Workshops</h2>
+        <ul>
+            <li>San Jose Sharks Inside Sales Workshop - November 2024</li>
+            <li>Ball Arena Sports Inside Sales Workshop - February 2025</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>📜 Certifications</h2>
+        <ul>
+            <li>Career Essentials in Generative AI - LinkedIn</li>
+            <li>Digital Marketing Simternship - Stukent</li>
+            <li>HubSpot Email Marketing Certification - HubSpot</li>
+            <li>Meta Ads Manager - Meta</li>
+            <li>HubSpot Inbound Marketing Certification - HubSpot</li>
+            <li>Microsoft Certified Application Specialist: Word, Excel, PowerPoint - Microsoft</li>
+        </ul>
+    </section>
+
     <footer>
-        <p>&copy; 2025 Jeffrey Loyal | All Rights Reserved.</p>
+        <p>&copy; 2025 Jeffrey Hoyle | All Rights Reserved.</p>
     </footer>
 </body>
 </html>
