--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeffrey Loyal | Portfolio</title>
+    <title>Jeffrey Hoyle | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -15,7 +15,6 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="work-experience.html">Work Experience</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -24,7 +23,7 @@
     </header>
     <section>
         <h2>About Me</h2>
-        <p>Hi there! I’m Jeffrey, a Business Marketing & Analytics graduate from the University of Denver. I have a passion for sports marketing, digital campaigns, and strategic branding. My experience spans across marketing strategy, sales, and data-driven business decisions.</p>
+        <p>Hi there! I’m Jeffrey, a Business Marketing & Analytics graduate from the University of Denver. I am a data-driven marketing and sales professional with expertise in customer engagement, digital campaigns, and event coordination. With a strong background in digital marketing and sales, I specialize in connecting with customers and communities to drive engagement and new business growth.</p>
     </section>
     <footer>
         <p>&copy; 2025 Jeffrey Loyal. All Rights Reserved.</p>
