--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1><img src="Formal pic.gif" alt="Jeffrey Hoyle" class="profile-pic"></h1>
         <p>Jeffrey Hoyle | Inside Sales Consultant for the San Jose Sharks | University of Denver Senior</p>
         <nav>
             <ul>
