--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     </header>
     <section>
         <h2>About Me</h2>
-        <p>Hi there! I’m Jeffrey, a Business Marketing & Analytics graduate from the University of Denver. I am a data-driven marketing and sales professional with expertise in customer engagement, digital campaigns, and event coordination. With a strong background in digital marketing and sales, I specialize in connecting with customers and communities to drive engagement and new business growth.</p>
+        <p>Hi there! I’m Jeffrey, a Business Marketing & Analytics senior from the University of Denver. I am a data-driven marketing and sales professional with expertise in customer engagement, digital campaigns, and event coordination. With a strong background in digital marketing and sales, I specialize in connecting with customers and communities to drive engagement and new business growth.</p>
+        <p>Beyond academics, I am an avid athlete, actively competing in Club Soccer and Club Baseball at the University of Denver. As the Intramural Sports Chairman for Beta Theta Pi, I embrace leadership and teamwork both on and off the field. My competitive nature drives me to continuously improve, while my coachability allows me to adapt and grow in both business and sports. I thrive in collaborative environments, making sales and team-driven roles the perfect fit for my skills and personality.</p>
+
     </section>
     <footer>
-        <p>&copy; 2025 Jeffrey Loyal. All Rights Reserved.</p>
+        <p>&copy; 2025 Jeffrey Hoyle. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
