--- a/skills.html
+++ b/skills.html
@@ -1,57 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills | Jeffrey Hoyle</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>My Skills</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="work-experience.html">Work Experience</a></li>
-                <li><a href="education.html">Education</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<section>
+    <h2>💡 Skills & Expertise</h2>
 
-    <section>
-        <h2>Technical Skills</h2>
-        <ul>
-            <li>Python (Data Analysis, Machine Learning)</li>
-            <li>SQL (Queries, Data Management)</li>
-            <li>Google Analytics & SEO</li>
-            <li>Tableau & Data Visualization</li>
-            <li>Microsoft Excel (Pivot Tables, VLOOKUP, Macros)</li>
-        </ul>
+    <p>"With a strong foundation in marketing, sales, and data analytics, I bring a unique blend of creativity, strategy, and analytical thinking. My ability to connect with customers, develop data-driven insights, and execute impactful marketing campaigns makes me an asset in both sales and marketing roles. Whether managing advertising strategies, optimizing customer engagement, or leading teams, I thrive in dynamic environments where I can drive business growth and create meaningful connections."</p>
 
-        <h2>Marketing Skills</h2>
-        <ul>
-            <li>Digital Marketing Strategy</li>
-            <li>Social Media Marketing (Instagram, LinkedIn, Twitter)</li>
-            <li>Advertising (Facebook Ads, Google Ads)</li>
-            <li>Brand Positioning & Customer Targeting</li>
-            <li>Email Marketing (Mailchimp, HubSpot)</li>
-        </ul>
+    <h3>🗣️ Communication & Customer Engagement</h3>
+    <ul>
+        <li>Strong interpersonal skills with the ability to <strong>build relationships, foster engagement, and drive sales.</strong></li>
+        <li>Experience in <strong>B2B and consumer sales</strong>, including trade shows and direct client interactions.</li>
+        <li>Effective communicator who thrives in <strong>team-oriented environments</strong>, ensuring smooth collaboration.</li>
+    </ul>
 
-        <h2>Soft Skills</h2>
-        <ul>
-            <li>Leadership & Teamwork</li>
-            <li>Public Speaking & Communication</li>
-            <li>Problem-Solving & Critical Thinking</li>
-            <li>Time Management & Organization</li>
-            <li>Adaptability & Quick Learning</li>
-        </ul>
-    </section>
+    <h3>📊 Marketing & Digital Advertising</h3>
+    <ul>
+        <li><strong>Marketing Strategy:</strong> Developed marketing plans by analyzing buyer behavior, target markets, and industry trends. <em>(Loving Social Media Internship)</em></li>
+        <li><strong>AI-Driven Marketing:</strong> Used AI tools to optimize campaigns, personalize customer experiences, and improve engagement. <em>(Loving Social Media Internship, DU Courses)</em></li>
+        <li><strong>Advertising Campaigns:</strong> Created and managed multi-platform ad campaigns, improving reach and conversions.</li>
+        <li><strong>SEO & Google Business Optimization:</strong> Managed Google Business Profiles, conducted keyword analysis, and implemented SEO strategies to enhance online visibility. <em>(Loving Social Media Internship)</em></li>
+        <li><strong>Content Creation:</strong> Designed high-quality blog and social media content using Canva, enhancing brand engagement. <em>(Loving Social Media Internship)</em></li>
+    </ul>
 
-    <footer>
-        <p>&copy; 2025 Jeffrey Hoyal | All Rights Reserved.</p>
-    </footer>
-</body>
-</html>
+    <h3>📈 Data Analysis & Insights</h3>
+    <ul>
+        <li><strong>Google Analytics Proficiency:</strong> Monitored key metrics (CTR, rankings, conversions) to assess campaign performance.</li>
+        <li><strong>Data-Driven Decision-Making:</strong> Identified consumer trends and behaviors through structured data analysis.</li>
+        <li><strong>Data Cleaning & Visualization:</strong> Created <strong>dashboards, charts, and reports</strong> to present insights effectively. <em>(DU Courses)</em></li>
+        <li><strong>Statistical Analysis:</strong> Applied analytical tools to develop strategic recommendations based on data trends.</li>
+    </ul>
+
+    <h3>🎯 Leadership & Team Management</h3>
+    <ul>
+        <li><strong>Team Leadership:</strong> Organized, trained, and managed teams in both <strong>business and sports environments.</strong></li>
+        <li><strong>Event Coordination:</strong> Planned, scheduled, and executed events to ensure seamless operations. <em>(DU Athletics Marketing, SportsHouse Coach)</em></li>
+        <li><strong>Coaching & Motivation:</strong> Guided and inspired teammates, leveraging strong interpersonal and leadership skills.</li>
+    </ul>
+
+    <h3>💻 Technical & Software Skills</h3>
+    <ul>
+        <li><strong>Programming:</strong> Python, HTML, SQL, R <em>(Sports Analytics)</em> – Basic knowledge <em>(DU Courses)</em></li>
+        <li><strong>Microsoft Suite:</strong> Advanced proficiency in Word, Excel, and PowerPoint.</li>
+        <li><strong>Marketing & Analytics Tools:</strong> Experienced in AI-driven marketing platforms and social media analytics.</li>
+    </ul>
+</section>
