--- a/work-experience.html
+++ b/work-experience.html
@@ -63,7 +63,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Jeffrey Loyal | All Rights Reserved.</p>
+        <p>&copy; 2025 Jeffrey Hoyle| All Rights Reserved.</p>
     </footer>
 </body>
 </html>
