--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,7 @@
     <section>
         <h2>💡 Skills & Expertise</h2>
 
-        <p>"With a strong foundation in marketing, sales, and data analytics, I bring a unique blend of creativity, strategy, and analytical thinking. My ability to connect with customers, develop data-driven insights, and execute impactful marketing campaigns makes me an asset in both sales and marketing roles. Whether managing advertising strategies, optimizing customer engagement, or leading teams, I thrive in dynamic environments where I can drive business growth and create meaningful connections."</p>
+        <p>With a strong foundation in marketing, sales, and data analytics, I bring a unique blend of creativity, strategy, and analytical thinking. My ability to connect with customers, develop data-driven insights, and execute impactful marketing campaigns makes me an asset in both sales and marketing roles. Whether managing advertising strategies, optimizing customer engagement, or leading teams, I thrive in dynamic environments where I can drive business growth and create meaningful connections.</p>
 
         <h3>🗣️ Communication & Customer Engagement</h3>
         <ul>
